[package]
name = "gpg-tui"
version = "0.11.0"
description = "Manage your GnuPG keys with ease!"
authors = ["Orhun Parmaksız <orhunparmaksiz@gmail.com>"]
license = "MIT"
readme = "README.md"
documentation = "https://docs.rs/gpg-tui"
homepage = "https://github.com/orhun/gpg-tui"
repository = "https://github.com/orhun/gpg-tui"
keywords = ["gnupg", "gpg", "tui", "key", "management"]
categories = ["command-line-utilities"]
include = [
  "src/**/*",
  "assets/*",
  "Cargo.*",
  "LICENSE",
  "README.md",
  "CHANGELOG.md",
]
edition = "2021"
default-run = "gpg-tui"
rust-version = "1.70.0"

[[bin]]
name = "gpg-tui-completions"
path = "src/bin/completions.rs"
test = false

[features]
tui-tests = []
gpg-tests = []

[dependencies]
gpgme = "0.11.0"
ratatui = "0.29.0"
anyhow = "1.0.98"
chrono = "0.4.41"
unicode-width = "0.2.0"
copypasta-ext = "0.4.4"
colorsys = "0.6.7"
shellexpand = "3.1.1"
toml = "0.8.22"
dirs-next = "2.0.0"
clap_complete = "4.5.50"
tinytemplate = "1.2.1"
better-panic = "0.3.0"
ratatui-splash-screen = "0.1.4"
env_logger = "0.11.8"
log = "0.4.27"

[dependencies.crossterm]
version = "0.29.0"
features = ["serde"]

[dependencies.clap]
version = "4.5.38"
features = ["derive", "env", "wrap_help", "cargo"]

[dependencies.serde]
version = "1.0.219"
features = ["derive"]

[dependencies.tui-logger]
version = "0.17.2"
default-features = false
features = ["crossterm"]

[dev-dependencies]
pretty_assertions = "1.4.1"

[profile.dev]
opt-level = 0
debug = true
panic = "abort"

[profile.test]
opt-level = 0
debug = true

[profile.release]
opt-level = 3
debug = false
panic = "abort"
lto = true
codegen-units = 1

[profile.bench]
opt-level = 3
debug = false
